# TestMate

./: .env.example  .env.example.docker  .env.example.local  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
backend_gateway/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend_gateway/alembic/: env.py
backend_gateway/alembic/versions/: 0001_initial.py  0002_add_agents_route.py  0003_add_auto_code_category.py
backend_gateway/app/: main.py
backend_gateway/app/api/: agents.py  auth.py  diagnose.py  health.py  kb.py  machines.py  notify.py  pr_agent.py  settings.py
backend_gateway/app/core/: config.py  dify_client.py  logging.py  pr_agent_client.py  ragflow_client.py  security.py  settings_store.py
backend_gateway/app/db/: session.py
backend_gateway/app/models/: __init__.py  agent.py  machine.py  system_setting.py  user.py
backend_gateway/app/schemas/: agent.py  auth.py  log.py  system_setting.py
deploy/: .env.example  .env.template  README.md  backup.sh  deploy.sh  docker-compose.yml  offline-images.txt  offline-save.sh  restore.sh
docs/specs/: 2026-07-04-p0-progress.md  2026-07-04-testmate-brief.md  2026-07-04-testmate-design.md  2026-07-07-p0-progress.md
frontend_web/: .dockerignore  Dockerfile  README.md  e2e.mjs  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
scripts/: create_admin.py  dev.sh  start.sh  stop.sh
src/: App.tsx  types.ts
(+54 files in other folders)
